--- a/references.bib
+++ b/references.bib
@@ -1,21 +1,322 @@
-@article{Eigen1971,
-  title={Selforganization of matter and the evolution of biological macromolecules},
-  author={Eigen, Manfred},
-  journal={Naturwissenschaften},
-  volume={58},
-  number={10},
-  pages={465--523},
-  year={1971},
-  publisher={Springer}
+@inproceedings{genter2013visionstationary,
+  author = {Katie Genter and Noa Agmon and Peter Stone},
+  title = {Improving Efficiency of Leading a Flock in Ad Hoc Teamwork Settings},
+  booktitle = {AAMAS Autonomous Robots and Multirobot Systems (ARMS) Workshop},
+  location = {Saint Paul, MN, USA},
+  month = {May},
+  year = {2013},
 }
 
-@article{Knuth1968,
-  title={Semantics of Context-free Languages},
-  author={Knuth, Donald E},
-  journal={Mathematical Systems Theory},
-  volume={2},
-  number={2},
-  pages={127--145},
-  year={1968},
-  publisher={Springer}
+@inproceedings{genter2013backsearch,
+  author = {Katie Genter and Noa Agmon and Peter Stone},
+  title = {Ad Hoc Teamwork for Leading a Flock},
+  booktitle = {Proceedings of the 12th International Conference on Autonomous Agents and Multiagent Systems (AAMAS 2013)},
+  location = {Saint Paul, MN, USA},
+  month = {May},
+  year = {2013},
 }
+
+@inproceedings{genter2014neighborsorientherd,
+  author = {Katie Genter and Peter Stone},
+  title = {Influencing a Flock via Ad Hoc Teamwork},
+  booktitle = {Proceedings of the Ninth International Conference on Swarm Intelligence (ANTS 2014)},
+  location = {Brussels, Belgium},
+  month = {September},
+  year = {2014},
+}
+
+@inproceedings{genter2015placement,
+  author = {Katie Genter and Shun Zhang and Peter Stone},
+  title = {Determining Placements of Influencing Agents in a Flock},
+  booktitle = {Proceedings of the 2015 International Conference on Autonomous Agents and Multiagent Systems (AAMAS-15)},
+  location = {Istanbul, Turkey},
+  month = {May},
+  year = {2015},
+}
+
+@inproceedings{genter2016facegoalfacecurrent,
+  author = {Katie Genter and Peter Stone},
+  title = {Adding Influencing Agents to a Flock},
+  booktitle = {Proceedings of the 15th International Conference on Autonomous Agents and Multiagent Systems (AAMAS-16)},
+  location = {Singapore, Singapore},
+  month = {May},
+  year = {2016},
+}
+
+@article{segermansunflower,
+author = {Segerman, Henry},
+year = {2010},
+month = {December},
+pages = {},
+title = {The Sunflower Spiral and the Fibonacci Metric}
+}
+
+@article{genter201612steplookahead,
+  author = {Katie Genter and Peter Stone},
+  title = {Ad Hoc Teamwork Behaviors for Influencing a Flock},
+  journal = {Acta Polytechnica},
+  Volume="56",
+  Number="1",
+  doi="10.14311/APP.2016.56.0018",
+  year = {2016},
+}
+
+@inproceedings{reynoldsmodel,
+  author = {Reynolds, Craig W.},
+  title = {Flocks, Herds and Schools: A Distributed Behavioral Model},
+  booktitle = {Proceedings of the 14th Annual Conference on Computer Graphics and Interactive Techniques},
+  series = {SIGGRAPH '87},
+  year = {1987},
+}
+
+@inproceedings{tanner2013flockinginteractions,
+  author={Herbert G. Tanner and Ali Jadbabaie and George J. Pappas}, 
+  booktitle={42nd IEEE International Conference on Decision and Control}, 
+  title={Stable flocking of mobile agents, part I: fixed topology}, 
+  year={Dec 2003}
+}
+
+@article{jad2003convergence,
+  journal={IEEE Transactions on Automatic Control}, 
+  title={Coordination of groups of mobile autonomous agents using nearest neighbor rules}, 
+  year={2003}, 
+  volume={48}, 
+  number={6}, 
+  author={Ali Jadbabaie and Jie Lin and A. Stephen Morse},
+  pages={988-1001},
+  month={June}
+}
+
+@article{vicsek1995,
+  title = {Novel Type of Phase Transition in a System of Self-Driven Particles},
+  author = {Vicsek, Tam\'as and Czir\'ok, Andr\'as and Ben-Jacob, Eshel and Cohen, Inon and Shochet, Ofer},
+  journal = {Phys. Rev. Lett.},
+  volume = {75},
+  issue = {6},
+  pages = {1226--1229},
+  numpages = {0},
+  year = {1995},
+  month = {Aug},
+  publisher = {American Physical Society},
+}
+
+@article{han2010teleporting,
+  author = {Han, Jing and Li, Ming and Guo, Lei},
+year = {2010},
+month = {07},
+pages = {},
+title = {Soft Control on Collective Behavior of a Group of Autonomous Agents By a Shill Agent},
+volume = {19},
+booktitle = {Journal of Systems Science and Complexity}
+}
+
+@article{su2009virtualleaderinformed,
+  author={Housheng Su and Xiaofan Wang and Zongli Lin},
+  journal={IEEE Transactions on Automatic Control}, 
+title={Flocking of Multi-Agents With a Virtual Leader}, 
+year={2009}, 
+volume={54}, 
+number={2}, 
+pages={293-307}, 
+month={Feb}
+}
+
+@article{olfati2006virtualleaderinformed,
+author={Reza Olfati-Saber},
+journal={IEEE Transactions on Automatic Control}, 
+title={Flocking for multi-agent dynamic systems: algorithms and theory}, 
+year={2006}, 
+volume={51}, 
+number={3}, 
+pages={401-420}, 
+month={March},
+}
+
+@article{selfdrivingcars,
+author = {E. Stern, Raphael and Cui, Shumo and Delle Monache, Maria Laura and Bhadani, Rahul and Bunting, Matt and Churchill, Miles and Hamilton, Nathaniel and Haulcy, R'mani and Pohlmann, Hannah and Wu, Fangyu and Piccoli, Benedetto and Seibold, Benjamin and Sprinkle, Jonathan and Work, Daniel},
+year = {2017},
+month = {05},
+pages = {},
+title = {Dissipation of stop-and-go waves via control of autonomous vehicles: Field experiments}
+}
+
+@inproceedings{luke05mason,
+  title={MASON: A Multi-Agent Simulation Environment},
+  author={Sean Luke and Claudio Cioffi-Revilla and Liviu Panait and Keith Sullivan and Gabriel Balan},
+  year = {2005},
+  booktitle={Simulation: Transactions of the society for Modeling and Simulation International}
+}
+
+@phdthesis{genterthesis,
+  title={Fly with Me: Algorithms and Methods for Influencing a Flock},
+  author={Katie Genter},
+  year={2017},
+  school={The University of Texas at Austin},
+}
+
+@article{couzin2005,
+author = {Couzin, Iain D and Krause, Jens and Franks, Nigel R and Levin, Simon A},
+journal = {Nature},
+month = {Feb},
+publisher = {Macmillian Magazines Ltd.},
+title = {{Effective leadership and decision-making in animal groups on the move}},
+volume = {433},
+year = {2005}
+}
+
+@article {Halloy2007,
+	author = {Halloy, Jos{\'e} and Sempo, Gr{\'e}gory and Caprari, Gilles and Rivault, Colette and Asadpour, Masoud and T{\^a}che, Fabien and Sa{\"\i}d, Imen and Durier, Virginie and Canonge, Stephane and Am{\'e}, J. M. and Detrain, Claire and Correll, Nikolaus and Martinoli, A. and Mondada, Francesco and Siegwart, Roland and Deneubourg, Jean-Louis},
+	title = {Social Integration of Robots into Groups of Cockroaches to Control Self-Organized Choices},
+	volume = {318},
+	number = {5853},
+	pages = {1155--1158},
+	year = {2007},
+	publisher = {American Association for the Advancement of Science},
+	issn = {0036-8075},
+	journal = {Science}
+}
+
+@inproceedings{vaughan98,
+    author = {Richard Vaughan and Neil Sumpter and Andy Frost and Stephen Cameron},
+    title = {Robot Sheepdog Project achieves automatic flock control},
+    booktitle = {From Animals to Animats 5: Proceedings of the Fifth International Conference on the Simulation of Adaptive Behaviour},
+    year = {1998},
+    pages = {489--493},
+    publisher = {MIT Press}
+}
+
+@book{sumpter2010collective,
+  title={Collective animal behavior},
+  author={Sumpter, David JT},
+  year={2010},
+  publisher={Princeton University Press}
+}
+
+@article {Chen2017Robobees,
+	author = {Chen, Yufeng and Wang, Hongqiang and Helbling, E. Farrell and Jafferis, Noah T. and Zufferey, Raphael and Ong, Aaron and Ma, Kevin and Gravish, Nicholas and Chirarattananon, Pakpong and Kovac, Mirko and Wood, Robert J.},
+	title = {A biologically inspired, flapping-wing, hybrid aerial-aquatic microrobot},
+	volume = {2},
+	number = {11},
+	year = {2017},
+	journal = {Science Robotics}
+}
+
+@article {Yang2006Consensus,
+author = {Yang, Wen and Cao, Lang and Wang, Xiaofan and Li, Xiang},
+title = {Consensus in a heterogeneous influence network},
+volume = {74},
+year = {2006},
+journal = {Physical Review E}
+}
+
+@article {sumpter2008fish,
+author = {Sumpter, David J.T. and Krause, Jens and James, Richard and Couzin,
+Iain D. and Ward, Ashley J.W.},
+title = {Consensus Decision Making by Fish},
+year={2008},
+volume = {18},
+journal = {Current Biology}
+}
+
+@article {liang2012opinion,
+author = {Liang, Haili and Yang, Yiping and Wang, Xiaofan},
+title = {Opinion dynamics in networks with heterogeneous confidence and
+influence},
+year = {2013},
+volume={392},
+journal={Physica A}
+}
+
+@inproceedings {schruben2010multivariate,
+author={Schruben, Lee W. and Singham, Dashi I.},
+title={Simulating Multivariate Time Series Using Flocking},
+booktitle={Proceedings of the 2010 Winter Simulation Conference},
+year={2010}}
+
+
+@inproceedings {singham2011agentmovement,
+author={Singham, Dashi and Therkildsen, Meredith and Schruben, Lee},
+title={Applications of Flocking Algorithms to Input Modeling for Agent
+Movement},
+booktitle={Proceedings of the 2011 Winter Simulation Conference},
+year={2011}}
+
+@inproceedings{Fu2017,
+    author = {Fu, Daniel Y. and Wang, Emily S. and Krafft, Peter and Grosz, Barbara},
+    title = {Design of Influencing Agents to Aid Flock Formation in Low-Density Settings},
+    year = {July 2018},
+	booktitle = {Proceedings of the 2018 International Conference on Autonomous Agents and Multiagent Systems (AAMAS-18)}
+}
+
+@inbook{deCastro2007,
+  title        = "Evolutionary Computing",
+  booktitle    = "Fundamentals of Natural Computing",
+  author       = "de Castro, Leandro Nunes",
+  chapter      = 3,
+  pages        = "105-108",
+  year         = 2007,
+  publisher    = "Chapman \& Hall/CRC",
+}
+
+@InProceedings{lukeRoboCup97,
+  author =       "Sean Luke",
+  title =        "Genetic Programming Produced Competitive Soccer
+                 Softbot Teams for {RoboCup97}",
+  booktitle =    "Genetic Programming 1998: Proceedings of the Third
+                 Annual Conference",
+  year =         "1998",
+  editor =       "John R. Koza and Wolfgang Banzhaf and 
+                 Kumar Chellapilla and Kalyanmoy Deb and Marco Dorigo and 
+                 David B. Fogel and Max H. Garzon and 
+                 David E. Goldberg and Hitoshi Iba and Rick Riolo",
+  pages =        "214--222",
+  address =      "University of Wisconsin, Madison, Wisconsin, USA",
+  publisher_address = "San Francisco, CA, USA",
+  month =        "22-25 " # jul,
+  publisher =    "Morgan Kaufmann",
+  keywords =     "genetic algorithms, genetic programming",
+  ISBN =         "1-55860-548-7",
+  URL =          "http://www.cs.gmu.edu/~sean/papers/robocupgp98.pdf",
+}
+
+@article{DorigoSwarmBot,
+ author = {Dorigo, Marco and Trianni, Vito and \c{S}ahin, Erol and Gro\ss, Roderich and Labella, Thomas H. and Baldassarre, Gianluca and Nolfi, Stefano and Deneubourg, Jean-Louis and Mondada, Francesco and Floreano, Dario and Gambardella, Luca M.},
+ title = {Evolving Self-Organizing Behaviors for a Swarm-Bot},
+ journal = {Auton. Robots},
+ issue_date = {September-November 2004},
+ volume = {17},
+ number = {2-3},
+ month = sep,
+ year = {2004},
+ issn = {0929-5593},
+ pages = {223--245},
+ numpages = {23},
+ url = {https://doi.org/10.1023/B:AURO.0000033973.24945.f3},
+ doi = {10.1023/B:AURO.0000033973.24945.f3},
+ acmid = {1008856},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {evolutionary robotics, swarm intelligence, swarm robotics, swarm-bot},
+} 
+
+@article{BriggsGP,
+ author = {Briggs, Forrest and O'Neill, Melissa},
+ title = {Functional Genetic Programming and Exhaustive Program Search with Combinator Expressions},
+ journal = {Int. J. Know.-Based Intell. Eng. Syst.},
+ issue_date = {January 2008},
+ volume = {12},
+ number = {1},
+ month = jan,
+ year = {2008},
+ issn = {1327-2314},
+ pages = {47--68},
+ numpages = {22},
+ url = {http://dl.acm.org/citation.cfm?id=1375341.1375345},
+ acmid = {1375345},
+ publisher = {IOS Press},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+}
+
+
+
+
