--- a/frontmatter/personalize.tex
+++ b/frontmatter/personalize.tex
@@ -1,35 +1,34 @@
 %!TEX root = ../dissertation.tex
 % Some details about the dissertation.
-\title{Title of the dissertation}
-\author{Firstname M. Lastname}
+\title{Design of Influencing Agents for Flocking}
+\author{Daniel Y. Fu}
 
 %If you have one advisor
-\advisor{Bigname Scientist}
+\advisor{Radhika Nagpal}
 
 \committeeInternalOne{Person Inside One}
 \committeeInternalTwo{Person Inside Two}
 
 %If you are coadvised
-\coadvisorOne{Delightful Researcher}
-\coadvisorTwo{Equally D. Researcher}
-\committeeInternal{Person Inside}
+%\coadvisorOne{Delightful Researcher}
+%\coadvisorTwo{Equally D. Researcher}
+%\committeeInternal{Person Inside}
 
 % Everyone has an External committee member
-\committeeExternal{Person Outside}
+%\committeeExternal{Person Outside}
 
 % ... about the degree.
-\degree{Doctor of Philosophy}
-\field{Psychology}
-\degreeyear{2024}
+\degree{Artium Baccalaureus}
+\field{Computer Science}
+\degreeyear{2018}
 \degreeterm{Spring}
-\degreemonth{May}
-\department{Psychology}
+\degreemonth{March}
+\department{Computer Science}
 
 % ... about the candidate's previous degrees.
-\pdOneName{B.S.}
-\pdOneSchool{Boston University}
-\pdOneYear{2018}
-
-\pdTwoName{M.A.}
-\pdTwoSchool{Monster's Univeristy}
-\pdTwoYear{2021}
+% \pdOneName{B.S.}
+% \pdOneSchool{Boston University}
+% \pdOneYear{2018}
+% \pdTwoName{M.A.}
+% \pdTwoSchool{Monster's Univeristy}
+% \pdTwoYear{2021}
