--- a/references.bib
+++ b/references.bib
@@ -317,6 +317,12 @@ year={2011}}
  address = {Amsterdam, The Netherlands, The Netherlands},
 }
 
-
+@book{kozaGP,
+author ={Koza, John R.},
+title = {Genetic Programming: On the Programming of Computers by Means of Natural Selection},
+year = {1992},
+publisher = {MIT Press},
+address = {Cambridge, MA, USA},
+}
 
 
