--- a/dissertation.tex
+++ b/dissertation.tex
@@ -32,12 +32,12 @@
 
 % include each chapter...
 \include{chapters/introduction}
-\include{chapters/chapter1}
-\include{chapters/chapter2}
-\include{chapters/chapter3}
-\include{chapters/chapter4}
-\include{chapters/chapter5}
-\include{chapters/chapter6}
+\include{chapters/background}
+\include{chapters/problem}
+\include{chapters/influencing}
+\include{chapters/evolution}
+\include{chapters/experiments}
+\include{chapters/results}
 \include{chapters/conclusion}
 
 \setstretch{\dnormalspacing}
