Rework chapters, almost done with evaluation

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -35,9 +35,10 @@
 \include{chapters/background}
 \include{chapters/problem}
 \include{chapters/influencing}
-\include{chapters/evolution}
-\include{chapters/experiments}
-\include{chapters/results}
+%\include{chapters/evolution}
+%\include{chapters/experiments}
+%\include{chapters/results}
+\include{chapters/evaluation}
 \include{chapters/conclusion}
 
 \setstretch{\dnormalspacing}
