--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -35,9 +35,7 @@ behaviors for influencing agents.
 We use a hand-constructed domain-specific language and evolve populations in
 a small test environment, before testing the best candidates in larger
 scenarios.
-We find that the genetic behaviors do well both in small-scale and large-scale
-simulations, a property that does not hold of the other hand-constructed
-behaviors [NEED TO RUN SIMULATIONS TO MAKE SURE THIS IS TRUE].
-In particular, the genetic behaviors strike a balance between quickly turning
-their neighbors towards the goal direction while not losing influence by
-flying away from their neighbors.
+We find that the best genetic behaviors can do as well as our best
+hand-designed algorithms, since they can strike a balance between quickly
+turning their neighbors towards the goal direction while not losing influence
+by flying away from their neighbors.
