--- a/frontmatter/personalize.tex
+++ b/frontmatter/personalize.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../dissertation.tex
 % Some details about the dissertation.
-\title{Design of Influencing Agents for Flocking}
+\title{Design of Influencing Agents for Flocking in Low-Density Settings}
 \author{Daniel Y. Fu}
 
 %If you have one advisor
