Some small changes

--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -24,8 +24,8 @@ separate the influencing agents from the flock.
 We find that in low-density conditions maintaining a connection to the flock is
 more important than rushing to orient towards the desired direction.
 
-We use these insights to propose new placement strategies and influencing agent
-behaviors that overcome the difficulties posed by our new environments.
+We use these insights to propose new influencing agent behaviors that overcome
+the difficulties posed by our new environments.
 The best influencing agents we identify act like normal members of the flock to
 achieve positions that allow for control, and then exert their influence.  
 We dub this strategy ``follow-then-influence.''
