--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-Get rid of all references to global and local behaviors
+Get rid of all references to global and local behaviors - DONE
 
 Error range for Figure 5.2
 
