Getting rid of last global/local mentions

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 Get rid of all references to global and local behaviors - DONE
 
-Error range for Figure 5.2
+Error range for Figure 5.2 - Have data, but odn't know how to visually display
 
 Two graphs for large setting: one with face, offset momentum,
 one step lookahead, coordinated, couzin, and multistep + face;
