--- a/Dissertate.cls
+++ b/Dissertate.cls
@@ -294,6 +294,7 @@
 \renewcommand{\backmatter}{
     \begin{appendices}
         \include{chapters/appendixA}
+        \include{chapters/appendixB}
     \end{appendices}
     \input{endmatter/personalize}
     \clearpage
