--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -18,11 +18,11 @@ We study the efficacy of placement strategies and influencing agent behaviors
 drawn from the literature, and find that the behaviors that have been shown to
 work well in high-density conditions tend to be much less effective in the
 environments we introduce.
-The source of this ineffectiveness is a tendency of influencing agents explored
-in prior work to face directions intended for maximal influence that actually
-separate the influencing agents from the flock.
+The source of this ineffectiveness is that the influencing agents explored in
+prior work tended to face directions optimized for maximal influence, but which
+actually separate the influencing agents from the flock.
 We find that in low-density conditions maintaining a connection to the flock is
-more important than rushing to orient towards the desired direction.
+more important than rushing to orient towards the goal direction.
 
 We use these insights to propose new influencing agent behaviors that overcome
 the difficulties posed by our new environments.
