--- a/frontmatter/personalize.tex
+++ b/frontmatter/personalize.tex
@@ -18,7 +18,7 @@
 %\committeeExternal{Person Outside}
 
 % ... about the degree.
-\degree{Artium Baccalaureus}
+\degree{Bachelor of Arts with Honors}
 \field{Computer Science}
 \degreeyear{2018}
 \degreeterm{Spring}
