--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -1,4 +1,49 @@
 %!TEX root = ../dissertation.tex
 % the acknowledgments section
 
-\newthought{Lorem ipsum dolor sit amet}, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit. Nulla facilisi. Nulla libero. Vivamus pharetra posuere sapien. Nam consectetuer. Sed aliquam, nunc eget euismod ullamcorper, lectus nunc ullamcorper orci, fermentum bibendum enim nibh eget ipsum. Donec porttitor ligula eu dolor. Maecenas vitae nulla consequat libero cursus venenatis. Nam magna enim, accumsan eu, blandit sed, blandit a, eros.
+This thesis arose from group projects in two classes, and I am forever indebted
+to my project partners for going on this wild ride with me.
+To Emily Wang, who took me seriously when I suggested doing a project on
+flocking more than a year ago, and to Thomas Lively, who jumped onto this weird
+project when I wanted to try out a new direction.
+The quality of this work has been immeasurably improved by my collaboration
+with the two of you, and there is no doubt in my mind that this work would not
+have come to fruition without your help.
+
+I am deeply grateful for the two advisors I've had the pleasure of working with
+over the course of this thesis, Barbara Grosz and Radhika Nagpal
+Their comments have sharpened this work over the past year and helped shape it
+into the form it takes today.
+Special thanks are due to Radhika, who agreed in December to be my former
+thesis advisor with just four months' notice.
+My other thesis reader and esteemed professor Yiling Chen also deserves my
+heartfelt thanks.
+And last but certainly not least, the dear friends of mine who read and
+commented on early drafts of this document: Josie Lo Bello, who read
+my thesis in the middle of the night on a thirteen-hour flight to China; Wendy
+Woodin, who gave me detailed comments on her lunch break because I asked the
+day before this thesis was due; Ross Rheingans-Yoo, who was a great peer
+mentor when I was an underclassman and who has continued to be a great friend
+from across the world in Hong Kong; and my brother Matthew Fu, who has been
+supporting me in countless ways since I was four.
+
+I would be remiss not to mention the many professors, chief among them Margo
+Seltzer and Eddie Kohler, who did not directly contribute to this project but
+who have nevertheless shaped my undergraduate experience in innumerable ways.
+Over the years, I have TF'd CS 61 with Margo, Eddie, and both Margo and Eddie
+at the same time, and there's nothing quite like seeing three different
+iterations of the same course to help you appreciate your mentors.
+I am especially thankful for the many ways Margo has helped me along my
+research journey over the years, from pointing me to a research-based startup
+when I e-mailed her looking for a summer internship in June of my freshman year
+to taking me onto the ASC project in my junior year.
+
+My deepest gratitude goes out to the Harvard Ballroom Dance Team, which has
+helped me grow in so many ways over the past four years and among whose team
+members I can count my closest friends.
+Shout outs as well to my friends in MD 121, who always kept their doors open
+for me and gave me comfort in times of need.
+
+And finally, I'd like to thank my parents Henry Fu and Hillary Wu for always
+believing me and supporting me over the years.
+Without their love and support, I would not be where I am today. 
