--- a/Dissertate.cls
+++ b/Dissertate.cls
@@ -120,7 +120,7 @@
 
 % References.
 \renewcommand\bibname{References}
-\RequirePackage[square,comma,numbers]{natbib}
+\RequirePackage[square,comma,numbers,sort&compress]{natbib}
 \renewcommand{\bibnumfmt}[1]{[#1]}
 \RequirePackage[palatino]{quotchap}
 \renewcommand*{\chapterheadstartvskip}{\vspace*{-0.5\baselineskip}}
@@ -223,7 +223,7 @@
 	\theauthor\\ to\\ The Department of \@department\\
 	\vspace{12pt}
 	in partial fulfillment of the requirements\\
-	for the degree of\\ \textit{\@degree}\\
+	for the degree of\\ \@degree\\
 	in the subject of\\ \@field\\
 	\vspace{12pt}
 	\@university\\ \@universitycity, \@universitystate\\
