--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -22,7 +22,7 @@ The source of this ineffectiveness is that the influencing agents explored in
 prior work tended to face directions optimized for maximal influence, but which
 actually separate the influencing agents from the flock.
 We find that in low-density conditions maintaining a connection to the flock is
-more important than rushing to orient towards the goal direction.
+more important than rushing to orient towards the target direction.
 
 We use these insights to propose new influencing agent behaviors that overcome
 the difficulties posed by our new environments.
