--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -5,16 +5,16 @@ This thesis arose from group projects in two classes, and I am forever indebted
 to my project partners for going on this wild ride with me.
 To Emily Wang, who took me seriously when I suggested doing a project on
 flocking more than a year ago, and to Thomas Lively, who jumped onto this weird
-project when I wanted to try out a new direction.
+project when I wanted to try out a new direction: thank you.
 The quality of this work has been immeasurably improved by my collaboration
 with the two of you, and there is no doubt in my mind that this work would not
 have come to fruition without your help.
 
 I am deeply grateful for the two advisors I've had the pleasure of working with
-over the course of this thesis, Barbara Grosz and Radhika Nagpal
+over the course of this thesis, Barbara Grosz and Radhika Nagpal.
 Their comments have sharpened this work over the past year and helped shape it
 into the form it takes today.
-Special thanks are due to Radhika, who agreed in December to be my former
+Special thanks are due to Radhika, who agreed in December to be my formal
 thesis advisor with just four months' notice.
 My other thesis reader and esteemed professor Yiling Chen also deserves my
 heartfelt thanks.
@@ -41,8 +41,8 @@ to taking me onto the ASC project in my junior year.
 My deepest gratitude goes out to the Harvard Ballroom Dance Team, which has
 helped me grow in so many ways over the past four years and among whose team
 members I can count my closest friends.
-Shout outs as well to my friends in MD 121, who always kept their doors open
-for me and gave me comfort in times of need.
+Shout outs as well to my friends in MD 121, who have always kept their doors
+open for me and given me comfort in times of need.
 
 And finally, I'd like to thank my parents Henry Fu and Hillary Wu for always
 believing me and supporting me over the years.
